Introducing [GET] /api/reservations/{reservationId}/room endpoint for displaying related objects.
